--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-jest": "~4.0.0",
     "fakexmlhttprequest": "0.0.1",
     "jest-cli": "^0.4.2",
+    "native-promise-only": "^0.7.8-a",
     "nodemon": "^1.3.7",
     "pprint": "0.0.1"
   },
