--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "scripts": {
     "test": "jest",
-    "test:watch": "nodemon -w __tests__ -w ./src -e js,jsx -x npm test -i *flycheck_*",
+    "test:watch": "nodemon -w __tests__ -w ./src -e js,jsx -x npm test",
     "prebuild": "rm -rf lib",
     "build": "./node_modules/.bin/babel --stage 1 ./src --out-dir ./lib",
-    "build:watch": "nodemon -w ./src -e js,jsx -x npm run build -i *flycheck_*"
+    "build:watch": "nodemon -w ./src -e js,jsx -x npm run build"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
