--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "setupTestFrameworkScriptFile": "<rootDir>/env-setup.js",
     "testFileExtensions": [
       "es6",
       "js"
@@ -45,6 +46,7 @@
   "devDependencies": {
     "babel-jest": "~4.0.0",
     "fakexmlhttprequest": "0.0.1",
+    "intl": "^0.1.4",
     "jest-cli": "^0.4.2",
     "native-promise-only": "^0.7.8-a",
     "nodemon": "^1.3.7",
