--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
   "peerDependencies": {
     "react": "~0.14.0",
     "react-dom": "~0.14.0",
-    "react-intl": "next"
+    "react-intl": "2.0.0-beta-2"
   }
 }
