--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "material-ui": "0.20.0",
     "react-tap-event-plugin": "^3.0.2",
     "underscore": "~1.8.3",
-    "create-react-class": "^15.6.2"
+    "create-react-class": "^15.6.2",
+    "prop-types": "^15.6.0"
   },
   "peerDependencies": {
     "react": "^16.0.0",
